--- a/Server_working/templates/registration.html
+++ b/Server_working/templates/registration.html
@@ -71,8 +71,8 @@
         						<input type="text" name="email_rep" class="form-control" id="inputEmailRepeated" placeholder="Repeat Email" required>
       						</div>
         					<h2 class="form-signin-heading">Username</h2>
-						<label for="inputUsername" name="username" class="sr-only">Username</label>
-        					<input type="text" id="inputUsername" class="form-control" placeholder="Enter Username" required>
+						<label for="inputUsername" class="sr-only">Username</label>
+        					<input type="text" name="username" id="inputUsername" class="form-control" placeholder="Enter Username" required>
         			</div>
         			
         			<div class="col-md-6">
@@ -86,7 +86,8 @@
         		</div>
         		<div class="row">
         			<div class="col-md-6">
-        					<button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
+        				<br>
+        				<button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
         				
         			</div>
         		</div>
