--- a/Server_working/templates/index.html
+++ b/Server_working/templates/index.html
@@ -84,7 +84,7 @@
             					<div class="carousel-caption">
               						<h1>Our Vision</h1>
               						<p>Our idea about NeverLate, how it will serve you.</p>
-              						<p><a class="btn btn-primary btn-lg" href="vision.html" role="button">Learn more</a></p>
+              						<p><a class="btn btn-primary btn-lg" href="{{ url_for('vision') }}" role="button">Learn more</a></p>
             					</div>
           				</div>
         			</div>
@@ -93,7 +93,7 @@
             					<div class="carousel-caption">
               						<h1>Requirements</h1>
               						<p>Fonctional & non-fonctional requirements, what we do first and what we do later.</p>
-              						<p><a class="btn btn-primary btn-lg" href="requirements.html" role="button">Learn more</a></p>
+              						<p><a class="btn btn-primary btn-lg" href="{{ url_for('requirements') }}" role="button">Learn more</a></p>
             					</div>
           				</div>
         			</div>
@@ -102,7 +102,7 @@
             					<div class="carousel-caption">
               						<h1>Architecture</h1>
               						<p>Technical details about the project, the recipe of NeverLate.</p>
-              						<p><a class="btn btn-primary btn-lg" href="architecture.html" role="button">Learn more</a></p>
+              						<p><a class="btn btn-primary btn-lg" href="{{ url_for('architecture') }}" role="button">Learn more</a></p>
             					</div>
           				</div>
         			</div>
