--- a/Server_working/templates/default_user.html
+++ b/Server_working/templates/default_user.html
@@ -115,7 +115,7 @@
 										
 										<div id="settings" class="hidden">
 											<h2>Settings</h2>
-											<form action="" method='POST'> <!--funzione da definire -->
+											<form action="{{ url_for('settings_def') }}" method='POST'> <!--funzione da definire -->
 												<div class="row">
 													<div class="col-md-4">
 														<hr class="featurette-divider">
