--- a/Server_working/templates/default_user.html
+++ b/Server_working/templates/default_user.html
@@ -30,6 +30,8 @@
 		
 		<link href="static/css/numeri.css" rel="stylesheet">
 		
+		<script src="static/javascript/G_key.js"></script>
+		
 	</head>
 	
 	<body>
@@ -63,7 +65,7 @@
             				</ul>
 					<ul class="nav navbar-nav navbar-right">
         					<li><a href="{{ url_for('logout') }}">Log Out</a></li>
-        					<li><a href="#menu-toggle" class="btn btn-primary" id="menu-toggle">Toggle Menu</a></li>
+        					<li><a href="#menu-toggle" class="btn btn-primary hidden-xs" id="menu-toggle">Toggle Menu</a></li>
 					</ul>
         			</div>
       			</div>
@@ -100,17 +102,39 @@
                     					<br>
                     					<br>
 										<ul class="nav nav-tabs visible-xs">
-											<li role="presentation" class="active"><a href="#" id="firstp_nav">First Page</a></li>
-											<li role="presentation"><a href="#" id="settings_nav">Settings</a></li>
-											<li role="presentation"><a href="#" id="calendar_nav">Calendar</a></li>
+											<li role="presentation" ><a href="#" id="firstp_nav">First Page</a></li>
+											<li role="presentation" ><a href="#" id="settings_nav">Settings</a></li>
+											<li role="presentation" ><a href="#" id="calendar_nav">Calendar</a></li>
 										</ul>
                         				<h1 class="page-header">{{ session['user'] }}</h1>
 										<div id="firstp">
 											{% if default == 't' %}
 												<div class="alert alert-info" role="alert">
-													<p>You settings are in default mode you can customize them at <a href="#" class="alert-link">this link</a></p>
+													<p>You settings are in default mode you can customize them at settings page</p>
 												</div>
 											{% endif %}
+											<div class="row">
+												<div class="col-md-4">
+													<h3 class="page-header">Info</h3>
+													<strong>
+														<p>System status: {{ system }}</p>
+														<br>
+														<p>Vibration status: {{ vibration }}</p>
+														<br>
+														<p>Sound status: {{ sound }}</p>
+														<br>
+														<p>Delay: {{ delay }}</p>
+													</strong>
+												</div>
+												<div class="col-md-8">
+													<h3 class="page-header">Your GoogleCalendar key</h3>
+													<form action="{{  }}" method='POST'>
+														<input type="text" id="G_key" class="form-control" value="{{ user_key }}" placeholder="GoogleCalendar key">
+														<span id="helpBlock" class="help-block">Change it only if you know how to handle it, if you want to learn more <a href="" id="alert_link">click here</a></span>
+														<button type="submit" id="change" class="btn btn-primary text-center">Change it</button>
+													</form>
+												</div>
+											</div>
 										</div>
 										
 										<div id="settings" class="hidden">
@@ -170,8 +194,28 @@
 										</div>
 										
 										<div id="calendar" class="hidden">
-											<h2>Calendar</h2>
-											<iframe src="https://www.google.com/calendar/embed?src={{ user_key }}&ctz=Europe/Rome" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+											<div class="row">
+												<div class="col-md-7">
+													<h2>Calendar</h2>
+													<iframe src="https://www.google.com/calendar/embed?src={{ user_key }}&ctz=Europe/Rome" style="border: 0" width="600" height="450" frameborder="0" scrolling="no"></iframe>
+												</div>
+												<div class="col-md-5">
+													<h2>New subject</h2>
+													<form action="{{  }}" method='POST'>
+        												<input type="text" name="newprof" id="newProf" class="form-control" placeholder="Add a new professor">
+        												<hr class="featurette-divider">
+        												<button type="submit" id="change" class="btn btn-primary text-center">Add professor</button>
+        											</form>
+        											<form action="{{  }}" method='POST'>
+        												<h4>Select one or more subjects</h4>
+    													<select multiple class="form-control" id="subjects">
+    														<option disabled>Enter a professor's name first</option>
+														</select>
+														<hr class="featurette-divider">
+														<button type="submit" id="change" class="btn btn-primary text-center">Add subject</button>
+													</form>
+												</div>
+											</div>
 										</div>
                     				</div>
                 			</div>
