--- a/Server_working/templates/prof_login.html
+++ b/Server_working/templates/prof_login.html
@@ -1,7 +1,7 @@
 <html lan="en">
 	<head>
     		<title>
-      			NeverLate! - Log In
+      			NeverLate! - Professor Log In
     		</title>
 	
 		<meta charset="utf-8">
@@ -69,7 +69,7 @@
 		<br>
         	
         	<div class="container">
-      			<form class="form-signin" action="{{ url_for('loggining') }}" method='POST'>
+      			<form class="form-signin" action="{{ url_for('prof_loggining') }}" method='POST'>
         			<h2 class="form-signin-heading">Please log in</h2>
 					<label for="inputEmail" class="sr-only">Username</label>
         			<input type="text" name='username' id="inputEmail" class="form-control" placeholder="Username" required autofocus>
