--- a/Server_working/templates/prof_settings.html
+++ b/Server_working/templates/prof_settings.html
@@ -1,7 +1,7 @@
 <html lan="en">
 	<head>
     		<title>
-     			NeverLate! - Professor
+     			NeverLate! - Professor - Settings
     		</title>
 	
 		<meta charset="utf-8">
@@ -14,11 +14,15 @@
 		
 		<link href="/static/css/sidebar.css" rel="stylesheet">
 		
+		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
+		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 		
 		<script src="/static/javascript/sidebar.js"></script>
+		
+		<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
 		
 		<script src="/static/javascript/numeri.js"></script>
 		
@@ -101,32 +105,52 @@
 											<li role="presentation" ><a href="{{ url_for('calendar') }}" id="calendar_nav">Calendar</a></li>
 										</ul>
                         				<h1 class="page-header">{{ session['prof'] }}</h1>
-										<div id="firstp">
-											{% if default == 't' %}
-												<div class="alert alert-info" role="alert">
-													<p>You settings are in default mode you can customize them at settings page</p>
+										<div id="settings">
+											<h2>Settings</h2>
+											<form action="{{ url_for('prof_settings_def') }}" method='POST'> 
+												<div class="row">
+													<div class="col-md-4">
+														<hr class="featurette-divider">
+														<h3>Vibration</h3>
+														<input type="checkbox" name="vibration" id="vibration"
+														{% if vib == 'on' %}
+															checked 
+														{% endif %} 
+														data-toggle="toggle">
+														
+														<hr class="featurette-divider">
+														<h3>Sound</h3>
+														<input type="checkbox" name="sound" id="sound"
+														{% if sound == 'on' %}
+															checked 
+														{% endif %}
+														data-toggle="toggle">
+													</div>	
+													<div class="col-md-8">
+														<div class="row">
+															<div class="col-md-3"></div>
+															<div class="col-md-6">
+																<h3>Notification Delay</h3>
+																<div class="input-group bootstrap-touchspin">
+																	<span class="input-group-btn">
+																		<button class="btn btn-default bootstrap-touchspin-down" id="minus" type="button">-</button>
+																	</span>
+																	<span class="input-group-addon bootstrap-touchspin-prefix" style="display: none;"></span>
+																	<input id="delay" type="text" value="{{ delay }}" name="delay" class="form-control" style="display: block;">
+																	<span class="input-group-addon bootstrap-touchspin-postfix">min</span>
+																	<span class="input-group-btn">
+																		<button class="btn btn-default bootstrap-touchspin-up" id="more" type="button">+</button>
+																	</span>
+																</div>
+																<br>
+																<button class="btn btn-lg btn-primary btn-block" type="submit">Set</button>
+															</div>
+														</div>
+														
+														
+													</div>
 												</div>
-											{% endif %}
-											<div class="row">
-												<div class="col-md-4">
-													<h3 class="page-header">Info</h3>
-													<strong>
-														<p>Vibration status: {{ vib }}</p>
-														<br>
-														<p>Sound status: {{ sound }}</p>
-														<br>
-														<p>Delay: {{ delay }}</p>
-													</strong>
-												</div>
-												<div class="col-md-8">
-													<h3 class="page-header">Your GoogleCalendar key</h3>
-													<form method='POST' action="{{ url_for('Gkeymod') }}"> 
-														<input type="text" id="G_key" name="G_key" class="form-control" value="{{ Gk }}" placeholder="GoogleCalendar key">
-														<span id="helpBlock" class="help-block">Change it only if you know how to handle it, if you want to learn more <a href="" id="alert_link">click here</a></span>
-														<button type="submit" id="change" class="btn btn-primary text-center">Change it</button>
-													</form>
-												</div>
-											</div>
+											</form>
 										</div>
                     				</div>
                 			</div>
