--- a/Server_working/templates/prof_calendar.html
+++ b/Server_working/templates/prof_calendar.html
@@ -1,7 +1,7 @@
 <html lan="en">
 	<head>
     		<title>
-     			NeverLate! - Professor - Settings
+     			NeverLate! - Professor - Calendar
     		</title>
 	
 		<meta charset="utf-8">
@@ -14,21 +14,11 @@
 		
 		<link href="/static/css/sidebar.css" rel="stylesheet">
 		
-		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
-		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 		
 		<script src="/static/javascript/sidebar.js"></script>
-		
-		<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
-		
-		<script src="/static/javascript/numeri.js"></script>
-		
-		<link href="/static/css/numeri.css" rel="stylesheet">
-		
-		<script src="/static/javascript/G_key.js"></script>
 		
 	</head>
 	
@@ -105,52 +95,38 @@
 											<li role="presentation" ><a href="{{ url_for('prof_calendar') }}" id="calendar_nav">Calendar</a></li>
 										</ul>
                         				<h1 class="page-header">{{ session['prof'] }}</h1>
-										<div id="settings">
-											<h2>Settings</h2>
-											<form action="{{ url_for('prof_settings_def') }}" method='POST'> 
-												<div class="row">
-													<div class="col-md-4">
-														<hr class="featurette-divider">
-														<h3>Vibration</h3>
-														<input type="checkbox" name="vibration" id="vibration"
-														{% if vib == 'on' %}
-															checked 
-														{% endif %} 
-														data-toggle="toggle">
-														
-														<hr class="featurette-divider">
-														<h3>Sound</h3>
-														<input type="checkbox" name="sound" id="sound"
-														{% if sound == 'on' %}
-															checked 
-														{% endif %}
-														data-toggle="toggle">
-													</div>	
-													<div class="col-md-8">
-														<div class="row">
-															<div class="col-md-3"></div>
-															<div class="col-md-6">
-																<h3>Notification Delay</h3>
-																<div class="input-group bootstrap-touchspin">
-																	<span class="input-group-btn">
-																		<button class="btn btn-default bootstrap-touchspin-down" id="minus" type="button">-</button>
-																	</span>
-																	<span class="input-group-addon bootstrap-touchspin-prefix" style="display: none;"></span>
-																	<input id="delay" type="text" value="{{ delay }}" name="delay" class="form-control" style="display: block;">
-																	<span class="input-group-addon bootstrap-touchspin-postfix">min</span>
-																	<span class="input-group-btn">
-																		<button class="btn btn-default bootstrap-touchspin-up" id="more" type="button">+</button>
-																	</span>
-																</div>
-																<br>
-																<button class="btn btn-lg btn-primary btn-block" type="submit">Set</button>
-															</div>
-														</div>
-														
-														
-													</div>
+										<div id="calendar">
+											<div class="row">
+												<div class="col-md-7">
+													<h2>Calendar</h2>
+													<iframe src="https://www.google.com/calendar/embed?src={{ Gk }}&ctz=Europe/Rome" style="border: 0" width="100%" height="450" frameborder="0" scrolling="no"></iframe>
 												</div>
-											</form>
+												<div class="col-md-5">
+													<h2>Search</h2>
+													<form action="{{ url_for('prof_cal_step1') }}" method='POST'>
+        												<input type="text" name="search" id="search" value="{{ search }}" class="form-control" placeholder="Search...">
+        												<hr class="featurette-divider">
+        												<button type="submit" id="change" class="btn btn-primary btn-lg text-center">Search</button>
+        											</form>
+        											<form action="{{ url_for('cal_step2') }}" method='POST'>
+        												<h4>Select one result</h4>
+    													<select multiple class="form-control" name="subjects" id="subjects">
+    														{% if session['search_res'] %}
+    															{% for subject in session['search_res'] %}
+    																<option>{{ subject['subj']+", "+subject['alpha']+", "+subject['prof']+", quadrimestre # "+subject['code'][9] }}</option>
+    															{% endfor %}
+    															
+    														{% elif search != '' and select == 'empty' %}
+    															<option disabled>No results, maybe you have all the possible options already added</option>
+    														{% elif search == '' %}
+    															<option disabled>Search something first</option>
+															{% endif %}
+														</select>
+														<hr class="featurette-divider">
+														<button type="submit" id="change" class="btn btn-primary btn-lg text-center" {% if not session['search_res'] %} disabled {% endif %}>Add</button>
+													</form>
+												</div>
+											</div>
 										</div>
                     				</div>
                 			</div>
