--- a/Server_working/templates/default_professor.html
+++ b/Server_working/templates/default_professor.html
@@ -121,9 +121,8 @@
 												<div class="col-md-8">
 													<h3 class="page-header">Your GoogleCalendar key</h3>
 													<form method='POST' action="{{ url_for('Gkeymod') }}"> 
-														<input type="text" id="G_key" name="G_key" class="form-control" value="{{ Gk }}" placeholder="GoogleCalendar key">
-														<span id="helpBlock" class="help-block">Change it only if you know how to handle it, if you want to learn more <a href="" id="alert_link">click here</a></span>
-														<button type="submit" id="change" class="btn btn-primary text-center">Change it</button>
+														<input type="text" id="G_key" name="G_key" class="form-control" value="{{ Gk }}" placeholder="GoogleCalendar key" readonly>
+														<span id="helpBlock" class="help-block">This is your GoogleCalendar id key</span>
 													</form>
 												</div>
 											</div>
