--- a/Server_working/templates/default_user.html
+++ b/Server_working/templates/default_user.html
@@ -122,7 +122,7 @@
 													<h3 class="page-header">Your GoogleCalendar key</h3>
 													<form method='POST' action="{{ url_for('Gkeymod') }}"> 
 														<input type="text" id="G_key" name="G_key" class="form-control" value="{{ Gk }}" placeholder="GoogleCalendar key">
-														<span id="helpBlock" class="help-block">Change it only if you know how to handle it, if you want to learn more <a href="" id="alert_link">click here</a></span>
+														<span id="helpBlock" class="help-block">Change it only if you know how to handle it.</span>
 														<button type="submit" id="change" class="btn btn-primary text-center">Change it</button>
 													</form>
 												</div>
