--- a/Server_working/templates/prof_settings.html
+++ b/Server_working/templates/prof_settings.html
@@ -143,6 +143,8 @@
 																	</span>
 																</div>
 																<br>
+																<ins>Negative values mean that the system must notify you with anticipation, viceversa for positive values.</ins>
+																<br>
 																<button class="btn btn-lg btn-primary btn-block" type="submit">Set</button>
 															</div>
 														</div>
